cmake_minimum_required( VERSION 3.20 )

set( CMAKE_CXX_COMPILER /usr/bin/clang++ )


project( Day1 CXX )
add_executable( Day1
  Day1.cpp
)
set_target_properties(
  Day1
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day1-2 CXX )
add_executable( Day1-2
  Day1-2.cpp
)
set_target_properties(
  Day1-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day2 CXX )
add_executable( Day2
  Day2.cpp
)
set_target_properties(
  Day2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day2-2 CXX )
add_executable( Day2-2
  Day2-2.cpp
)
set_target_properties(
  Day2-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)


project( Day3 CXX )
add_executable( Day3
  Day3.cpp
)
set_target_properties(
  Day3
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day3-2 CXX )
add_executable( Day3-2
  Day3-2.cpp
)
set_target_properties(
  Day3-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day4 CXX )
add_executable( Day4
  Day4.cpp
)
set_target_properties(
  Day4
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day4-2 CXX )
add_executable( Day4-2
  Day4-2.cpp
)
set_target_properties(
  Day4-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day5 CXX )
add_executable( Day5
  Day5.cpp
)
set_target_properties(
  Day5
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day5-2 CXX )
add_executable( Day5-2
  Day5-2.cpp
)
set_target_properties(
  Day5-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day6 CXX )
add_executable( Day6
  Day6.cpp
)
set_target_properties(
  Day6
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day6-2 CXX )
add_executable( Day6-2
  Day6-2.cpp
)
set_target_properties(
  Day6-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day7 CXX )
add_executable( Day7
  Day7.cpp
)
set_target_properties(
  Day7
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day7-2 CXX )
add_executable( Day7-2
  Day7-2.cpp
)
set_target_properties(
  Day7-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day8 CXX )
add_executable( Day8
  Day8.cpp
)
set_target_properties(
  Day8
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)

project( Day8-2 CXX )
add_executable( Day8-2
  Day8-2.cpp
)
set_target_properties(
  Day8-2
  PROPERTIES
  CXX_STANDARD 17
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin
)